{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 167,
  "lineage": "8ffb976f-202b-cc4d-8280-a08737c5b9ca",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Jenkins-Master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03c8ead5922bf8082",
            "arn": "arn:aws:ec2:us-east-1:165541912265:instance/i-0954382df6d1fb339",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0954382df6d1fb339",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "My_Key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07d5044bd276493e5",
            "private_dns": "ip-10-0-1-31.ec2.internal",
            "private_ip": "10.0.1.31",
            "public_dns": "ec2-54-81-206-68.compute-1.amazonaws.com",
            "public_ip": "54.81.206.68",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 0,
                "kms_key_id": "arn:aws:kms:us-east-1:165541912265:key/e8abbc0f-a37f-4e57-8071-d137c2a25664",
                "throughput": 0,
                "volume_id": "vol-068a0f44c22c0c144",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07361eb0cb810b1e3",
            "tags": {
              "Name": "Jenkins-Master"
            },
            "tags_all": {
              "Name": "Jenkins-Master"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f7fd369baa69a5d8"
            ]
          },
          "dependencies": [
            "aws_instance.Logging-Stack",
            "aws_instance.Monitoring-Stack",
            "aws_instance.Nexus-Registry",
            "aws_instance.Slave-Compute",
            "aws_key_pair.sh-key-for-me",
            "aws_security_group.sg-01",
            "aws_subnet.jenkins_subnet",
            "aws_vpc.main_VPC",
            "data.aws_ami.amzn-linux-ec2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Logging-Stack",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03c8ead5922bf8082",
            "arn": "arn:aws:ec2:us-east-1:165541912265:instance/i-05daaa45d0c5284e6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05daaa45d0c5284e6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "My_Key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0809eeeec4c7deedd",
            "private_dns": "ip-10-0-1-223.ec2.internal",
            "private_ip": "10.0.1.223",
            "public_dns": "ec2-18-209-174-18.compute-1.amazonaws.com",
            "public_ip": "18.209.174.18",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 0,
                "kms_key_id": "arn:aws:kms:us-east-1:165541912265:key/e8abbc0f-a37f-4e57-8071-d137c2a25664",
                "throughput": 0,
                "volume_id": "vol-048f59e7a7fcbe3fa",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07361eb0cb810b1e3",
            "tags": {
              "Name": "Logging-Stack"
            },
            "tags_all": {
              "Name": "Logging-Stack"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f7fd369baa69a5d8"
            ]
          },
          "dependencies": [
            "aws_instance.Nexus-Registry",
            "aws_key_pair.sh-key-for-me",
            "aws_security_group.sg-01",
            "aws_subnet.jenkins_subnet",
            "aws_vpc.main_VPC",
            "data.aws_ami.amzn-linux-ec2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Monitoring-Stack",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03c8ead5922bf8082",
            "arn": "arn:aws:ec2:us-east-1:165541912265:instance/i-0c56226259cc84400",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c56226259cc84400",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "My_Key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05b62c51745182656",
            "private_dns": "ip-10-0-1-17.ec2.internal",
            "private_ip": "10.0.1.17",
            "public_dns": "ec2-34-229-237-101.compute-1.amazonaws.com",
            "public_ip": "34.229.237.101",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 0,
                "kms_key_id": "arn:aws:kms:us-east-1:165541912265:key/e8abbc0f-a37f-4e57-8071-d137c2a25664",
                "throughput": 0,
                "volume_id": "vol-07027632d04ed7a7c",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07361eb0cb810b1e3",
            "tags": {
              "Name": "Monitoring-Stack"
            },
            "tags_all": {
              "Name": "Monitoring-Stack"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f7fd369baa69a5d8"
            ]
          },
          "dependencies": [
            "aws_instance.Nexus-Registry",
            "aws_key_pair.sh-key-for-me",
            "aws_security_group.sg-01",
            "aws_subnet.jenkins_subnet",
            "aws_vpc.main_VPC",
            "data.aws_ami.amzn-linux-ec2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Nexus-Registry",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03c8ead5922bf8082",
            "arn": "arn:aws:ec2:us-east-1:165541912265:instance/i-02e1c99c8467e8406",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02e1c99c8467e8406",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "My_Key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0217e6539270b366f",
            "private_dns": "ip-10-0-1-28.ec2.internal",
            "private_ip": "10.0.1.28",
            "public_dns": "ec2-3-81-39-238.compute-1.amazonaws.com",
            "public_ip": "3.81.39.238",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 0,
                "kms_key_id": "arn:aws:kms:us-east-1:165541912265:key/e8abbc0f-a37f-4e57-8071-d137c2a25664",
                "throughput": 0,
                "volume_id": "vol-06a53b7b6e4c116d8",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07361eb0cb810b1e3",
            "tags": {
              "Name": "Nexus-Registry"
            },
            "tags_all": {
              "Name": "Nexus-Registry"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f7fd369baa69a5d8"
            ]
          },
          "dependencies": [
            "aws_key_pair.sh-key-for-me",
            "aws_security_group.sg-01",
            "aws_subnet.jenkins_subnet",
            "aws_vpc.main_VPC",
            "data.aws_ami.amzn-linux-ec2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Slave-Compute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03c8ead5922bf8082",
            "arn": "arn:aws:ec2:us-east-1:165541912265:instance/i-00311f9bd3112aedd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00311f9bd3112aedd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "My_Key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0345078ae712e39e9",
            "private_dns": "ip-10-0-1-237.ec2.internal",
            "private_ip": "10.0.1.237",
            "public_dns": "ec2-3-84-88-40.compute-1.amazonaws.com",
            "public_ip": "3.84.88.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 0,
                "kms_key_id": "arn:aws:kms:us-east-1:165541912265:key/e8abbc0f-a37f-4e57-8071-d137c2a25664",
                "throughput": 0,
                "volume_id": "vol-0243817d5e6dc891a",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07361eb0cb810b1e3",
            "tags": {
              "Name": "Slave-Compute"
            },
            "tags_all": {
              "Name": "Slave-Compute"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f7fd369baa69a5d8"
            ]
          },
          "dependencies": [
            "aws_instance.Nexus-Registry",
            "aws_key_pair.sh-key-for-me",
            "aws_security_group.sg-01",
            "aws_subnet.jenkins_subnet",
            "aws_vpc.main_VPC",
            "data.aws_ami.amzn-linux-ec2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165541912265:internet-gateway/igw-02857a2f05b4a6716",
            "id": "igw-02857a2f05b4a6716",
            "owner_id": "165541912265",
            "vpc_id": "vpc-03cc96a7162f1f785"
          },
          "dependencies": [
            "aws_vpc.main_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085b643356b2615ce",
            "original_route_table_id": "rtb-041bbbbf38fc08614",
            "route_table_id": "rtb-0d6b53eb7dc51c0e5",
            "vpc_id": "vpc-03cc96a7162f1f785"
          },
          "dependencies": [
            "aws_internet_gateway.igw-jenkins",
            "aws_route_table.main-table",
            "aws_vpc.main_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165541912265:route-table/rtb-0d6b53eb7dc51c0e5",
            "id": "rtb-0d6b53eb7dc51c0e5",
            "owner_id": "165541912265",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02857a2f05b4a6716",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-table-jenkins"
            },
            "tags_all": {
              "Name": "main-table-jenkins"
            },
            "timeouts": null,
            "vpc_id": "vpc-03cc96a7162f1f785"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-jenkins",
            "aws_vpc.main_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165541912265:security-group/sg-0f7fd369baa69a5d8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f7fd369baa69a5d8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "alertmanager",
                "from_port": 9093,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9093
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow anyone on port 8080",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow anyone on port 8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow anyone on port 8080",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow anyone on port 8080",
                "from_port": 8082,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8082
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow anyone on port 8080",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow anyone on port 8080",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow anyone on port 8080",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow anyone on port 8080",
                "from_port": 9104,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9104
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "elastic",
                "from_port": 9200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9200
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "elastic",
                "from_port": 9300,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9300
              }
            ],
            "name": "terraform-20220419033016694100000001",
            "name_prefix": "terraform-",
            "owner_id": "165541912265",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03cc96a7162f1f785"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jenkins_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165541912265:subnet/subnet-07361eb0cb810b1e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07361eb0cb810b1e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "165541912265",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-03cc96a7162f1f785"
          },
          "dependencies": [
            "aws_vpc.main_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:165541912265:vpc/vpc-03cc96a7162f1f785",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-010c1c165804fe7d4",
            "default_route_table_id": "rtb-041bbbbf38fc08614",
            "default_security_group_id": "sg-005d468697c5810e8",
            "dhcp_options_id": "dopt-090c027e58a112e62",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03cc96a7162f1f785",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-041bbbbf38fc08614",
            "owner_id": "165541912265",
            "tags": {
              "Name": "Jenkins_test"
            },
            "tags_all": {
              "Name": "Jenkins_test"
            }
          }
        }
      ]
    }
  ]
}